--- a/src/OverdueInvoices/Finance/Finance.csproj
+++ b/src/OverdueInvoices/Finance/Finance.csproj
@@ -5,4 +5,8 @@
         <TargetFramework>netcoreapp3.1</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="NServiceBus" Version="7.4.3" />
+    </ItemGroup>
+
 </Project>
