Split InvoiceOverdueHandler into DebtCollection endpoint

--- a/src/OverdueInvoices/OverdueInvoices.IntegrationTests/OverdueInvoices.IntegrationTests.csproj
+++ b/src/OverdueInvoices/OverdueInvoices.IntegrationTests/OverdueInvoices.IntegrationTests.csproj
@@ -15,6 +15,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\DebtCollection\DebtCollection.csproj" />
       <ProjectReference Include="..\Finance\Finance.csproj" />
       <ProjectReference Include="..\Messages\Messages.csproj" />
     </ItemGroup>
