--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,7 +1,13 @@
 version: 2
 updates:
 - package-ecosystem: nuget
-  directory: "/src"
+  directory: "/src/OrderDiscount"
+  schedule:
+    interval: daily
+    time: '04:00'
+  open-pull-requests-limit: 10
+- package-ecosystem: nuget
+  directory: "/src/OverdueInvoices"
   schedule:
     interval: daily
     time: '04:00'
