--- a/src/OverdueInvoices/OverdueInvoices.IntegrationTests/OverdueInvoices.IntegrationTests.csproj
+++ b/src/OverdueInvoices/OverdueInvoices.IntegrationTests/OverdueInvoices.IntegrationTests.csproj
@@ -11,7 +11,7 @@
         <PackageReference Include="NUnit3TestAdapter" Version="4.3.1" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.4.1" />
         <PackageReference Include="NServiceBus.AcceptanceTesting" Version="8.0.2" />
-        <PackageReference Include="NServiceBus.IntegrationTesting" Version="1.2.0" />
+        <PackageReference Include="NServiceBus.IntegrationTesting" Version="2.0.0-alpha.1" />
     </ItemGroup>
 
     <ItemGroup>
