--- a/src/OverdueInvoices/OverdueInvoices.IntegrationTests/OverdueInvoices.IntegrationTests.csproj
+++ b/src/OverdueInvoices/OverdueInvoices.IntegrationTests/OverdueInvoices.IntegrationTests.csproj
@@ -1,17 +1,17 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net6.0</TargetFramework>
+        <TargetFramework>net8.0</TargetFramework>
         <IsPackable>false</IsPackable>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="NServiceBus" Version="8.1.6" />
-        <PackageReference Include="nunit" Version="4.0.1" />
-        <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
-        <PackageReference Include="NServiceBus.AcceptanceTesting" Version="8.1.6" />
-        <PackageReference Include="NServiceBus.IntegrationTesting" Version="2.0.0-alpha.1" />
+        <PackageReference Include="NServiceBus" Version="9.2.3" />
+        <PackageReference Include="nunit" Version="4.2.2" />
+        <PackageReference Include="NUnit3TestAdapter" Version="4.6.0" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
+        <PackageReference Include="NServiceBus.AcceptanceTesting" Version="9.2.3" />
+        <PackageReference Include="NServiceBus.IntegrationTesting" Version="2.0.0" />
     </ItemGroup>
 
     <ItemGroup>
